--- a/test-output/index.html
+++ b/test-output/index.html
@@ -54,7 +54,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-PageFactoryDemo">
-                    <span class="test-stats">2 tests</span>
+                    <span class="test-stats">3 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,22 @@
                     <div class="method-list-content passed suite-PageFactoryDemo">
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-PageFactoryDemo" title="com.crm.qa.mintTestCases.MINT1234" hash-for-method="mint1234({RecordingToCopy=Tue, Apr 03, 02 50 PM, CopyToCourse=democourse1, CopyFromCourse=purge148})">mint1234({RecordingToCopy=Tue, Apr 03, 02 50 PM, CopyToCourse=democourse1, CopyFromCourse=purge148})</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-PageFactoryDemo" title="com.crm.qa.testCases.LoginPageTest" hash-for-method="titleTest">titleTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-PageFactoryDemo" title="com.crm.qa.testCases.LoginPageTest" hash-for-method="userLoginTest">userLoginTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-PageFactoryDemo" title="com.crm.qa.testCases.AdminDashboardPageTest" hash-for-method="validateAdminPageHeadingTest">validateAdminPageHeadingTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -123,6 +133,11 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-PageFactoryDemo" title="com.crm.qa.testCases.LoginPageTest" hash-for-method="validateLogoTest">validateLogoTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-PageFactoryDemo" title="com.crm.qa.testCases.AdminDashboardPageTest" hash-for-method="verifyElementPresense">verifyElementPresense</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-PageFactoryDemo -->
@@ -148,6 +163,44 @@
                   <a name="validateCoursesPageHeadingTest">
                   </a> <!-- validateCoursesPageHeadingTest -->
                   <span class="method-name">validateCoursesPageHeadingTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-PageFactoryDemo-class-passed -->
+          <div class="suite-PageFactoryDemo-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.crm.qa.testCases.AdminDashboardPageTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateAdminPageHeadingTest">
+                  </a> <!-- validateAdminPageHeadingTest -->
+                  <span class="method-name">validateAdminPageHeadingTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyElementPresense">
+                  </a> <!-- verifyElementPresense -->
+                  <span class="method-name">verifyElementPresense</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-PageFactoryDemo-class-passed -->
+          <div class="suite-PageFactoryDemo-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.crm.qa.mintTestCases.MINT1234</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="mint1234({RecordingToCopy=Tue, Apr 03, 02 50 PM, CopyToCourse=democourse1, CopyFromCourse=purge148})">
+                  </a> <!-- mint1234({RecordingToCopy=Tue, Apr 03, 02 50 PM, CopyToCourse=democourse1, CopyFromCourse=purge148}) -->
+                  <span class="method-name">mint1234</span>
+                  <span class="parameters">({RecordingToCopy=Tue, Apr 03, 02 50 PM, CopyToCourse=democourse1, CopyFromCourse=purge148})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -211,6 +264,12 @@
       &lt;class name=&quot;com.crm.qa.testCases.CoursesPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- CoursesPageTest --&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;AdminDashboardPageTest&quot;&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;com.crm.qa.testCases.AdminDashboardPageTest&quot;/&gt;
+      &lt;class name=&quot;com.crm.qa.mintTestCases.MINT1234&quot;/&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- AdminDashboardPageTest --&gt;
 &lt;/suite&gt; &lt;!-- PageFactoryDemo --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -226,6 +285,9 @@
               </li>
               <li>
                 <span class="test-name">CoursesPageTest (1 class)</span>
+              </li>
+              <li>
+                <span class="test-name">AdminDashboardPageTest (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -251,32 +313,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'userLoginTest')
-data.setCell(0, 2, 'com.crm.qa.testCases.LoginPageTest')
-data.setCell(0, 3, 2200);
+data.setCell(0, 1, 'mint1234')
+data.setCell(0, 2, 'com.crm.qa.mintTestCases.MINT1234')
+data.setCell(0, 3, 39391);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validateCoursesPageHeadingTest')
-data.setCell(1, 2, 'com.crm.qa.testCases.CoursesPageTest')
-data.setCell(1, 3, 1847);
+data.setCell(1, 1, 'verifyElementPresense')
+data.setCell(1, 2, 'com.crm.qa.testCases.AdminDashboardPageTest')
+data.setCell(1, 3, 2583);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'validateLogoTest')
+data.setCell(2, 1, 'userLoginTest')
 data.setCell(2, 2, 'com.crm.qa.testCases.LoginPageTest')
-data.setCell(2, 3, 102);
+data.setCell(2, 3, 1864);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'validateCopyrightTextTest')
-data.setCell(3, 2, 'com.crm.qa.testCases.LoginPageTest')
-data.setCell(3, 3, 75);
+data.setCell(3, 1, 'validateCoursesPageHeadingTest')
+data.setCell(3, 2, 'com.crm.qa.testCases.CoursesPageTest')
+data.setCell(3, 3, 1708);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'titleTest')
-data.setCell(4, 2, 'com.crm.qa.testCases.LoginPageTest')
-data.setCell(4, 3, 48);
+data.setCell(4, 1, 'validateAdminPageHeadingTest')
+data.setCell(4, 2, 'com.crm.qa.testCases.AdminDashboardPageTest')
+data.setCell(4, 3, 1256);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'validateLogoTest')
+data.setCell(5, 2, 'com.crm.qa.testCases.LoginPageTest')
+data.setCell(5, 3, 75);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'titleTest')
+data.setCell(6, 2, 'com.crm.qa.testCases.LoginPageTest')
+data.setCell(6, 3, 72);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'validateCopyrightTextTest')
+data.setCell(7, 2, 'com.crm.qa.testCases.LoginPageTest')
+data.setCell(7, 3, 47);
 window.suiteTableData['PageFactoryDemo']= { tableData: data, tableDiv: 'times-div-PageFactoryDemo'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 46 seconds</span>
               <div id="times-div-PageFactoryDemo">
               </div> <!-- times-div-PageFactoryDemo -->
             </div> <!-- times-div -->
@@ -309,73 +383,111 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">207 ms</span>
+                <span class="method-start">203 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">titleTest</span>
-                <span class="method-start">10425 ms</span>
+                <span class="method-start">10335 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">10479 ms</span>
+                <span class="method-start">10411 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">11546 ms</span>
+                <span class="method-start">11400 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">validateLogoTest</span>
-                <span class="method-start">21253 ms</span>
+                <span class="method-start">20530 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">21359 ms</span>
+                <span class="method-start">20606 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">23039 ms</span>
+                <span class="method-start">21539 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">validateCopyrightTextTest</span>
-                <span class="method-start">32699 ms</span>
+                <span class="method-start">30803 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">32776 ms</span>
+                <span class="method-start">30852 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">33886 ms</span>
+                <span class="method-start">31880 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">userLoginTest</span>
-                <span class="method-start">43600 ms</span>
+                <span class="method-start">41671 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">45803 ms</span>
+                <span class="method-start">43537 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.crm.qa.testCases.CoursesPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setup</span>
-                <span class="method-start">46892 ms</span>
+                <span class="method-start">44600 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">validateCoursesPageHeadingTest</span>
-                <span class="method-start">56566 ms</span>
+                <span class="method-start">54018 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">58416 ms</span>
+                <span class="method-start">55731 ms</span>
               </div> <!-- configuration-test after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.crm.qa.mintTestCases.MINT1234</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">mint1234({RecordingToCopy=Tue, Apr 03, 02 50 PM, CopyToCourse=democourse1, CopyFromCourse=purge148})</span>
+                <span class="method-start">57446 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">96838 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.crm.qa.testCases.AdminDashboardPageTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">97890 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">validateAdminPageHeadingTest</span>
+                <span class="method-start">107444 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">108702 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">110169 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyElementPresense</span>
+                <span class="method-start">119329 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">121913 ms</span>
+              </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.crm.qa.testCases.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">59494 ms</span>
+                <span class="method-start">122913 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
