--- a/test-output/old/PageFactoryDemo/methods.html
+++ b/test-output/old/PageFactoryDemo/methods.html
@@ -1,38 +1,54 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>PageFactoryDemo</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:13:21</td>   <td>0</td> <td title="&gt;&gt;LoginPageTest.beforeSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:13:21</td>   <td>201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:13:31</td>   <td>10408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.titleTest()[pri:1, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">titleTest</td> 
-  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:13:31</td>   <td>10473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:13:32</td>   <td>11540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:13:42</td>   <td>21247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateLogoTest()[pri:2, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">validateLogoTest</td> 
-  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:13:42</td>   <td>21353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:13:44</td>   <td>23033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:13:53</td>   <td>32693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateCopyrightTextTest()[pri:3, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">validateCopyrightTextTest</td> 
-  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:13:53</td>   <td>32770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:13:55</td>   <td>33881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:14:04</td>   <td>43594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.userLoginTest()[pri:4, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">userLoginTest</td> 
-  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:14:07</td>   <td>45797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>19/09/16 08:14:08</td>   <td>46887</td> <td>&nbsp;</td><td title="&gt;&gt;CoursesPageTest.setup()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@6e1567f1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>19/09/16 08:14:17</td>   <td>56560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CoursesPageTest.validateCoursesPageHeadingTest()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@6e1567f1]">validateCoursesPageHeadingTest</td> 
-  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>19/09/16 08:14:19</td>   <td>58410</td> <td>&nbsp;</td><td title="&lt;&lt;CoursesPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@6e1567f1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/09/16 08:14:20</td>   <td>59488</td> <td title="&lt;&lt;LoginPageTest.afterSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:57:24</td>   <td>0</td> <td title="&gt;&gt;LoginPageTest.beforeSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:57:24</td>   <td>197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:57:34</td>   <td>10329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.titleTest()[pri:1, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">titleTest</td> 
+  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:57:35</td>   <td>10405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:57:36</td>   <td>11394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:57:45</td>   <td>20524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateLogoTest()[pri:2, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">validateLogoTest</td> 
+  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:57:45</td>   <td>20605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:57:46</td>   <td>21533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:57:55</td>   <td>30797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateCopyrightTextTest()[pri:3, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">validateCopyrightTextTest</td> 
+  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:57:55</td>   <td>30846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:57:56</td>   <td>31874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:58:06</td>   <td>41665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.userLoginTest()[pri:4, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">userLoginTest</td> 
+  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:58:08</td>   <td>43531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>19/09/16 08:58:09</td>   <td>44594</td> <td>&nbsp;</td><td title="&gt;&gt;CoursesPageTest.setup()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@6e1567f1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>19/09/16 08:58:18</td>   <td>54012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CoursesPageTest.validateCoursesPageHeadingTest()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@6e1567f1]">validateCoursesPageHeadingTest</td> 
+  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>19/09/16 08:58:20</td>   <td>55725</td> <td>&nbsp;</td><td title="&lt;&lt;CoursesPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.CoursesPageTest@6e1567f1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="bbe1b6">  <td>19/09/16 08:58:22</td>   <td>57440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MINT1234.mint1234(java.util.HashMap)[pri:0, instance:com.crm.qa.mintTestCases.MINT1234@73846619]">mint1234</td> 
+  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="bbe1b6">  <td>19/09/16 08:59:01</td>   <td>96832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MINT1234.tearDown()[pri:0, instance:com.crm.qa.mintTestCases.MINT1234@73846619]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="f5b57f">  <td>19/09/16 08:59:02</td>   <td>97885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminDashboardPageTest.setup()[pri:0, instance:com.crm.qa.testCases.AdminDashboardPageTest@3159c4b8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="f5b57f">  <td>19/09/16 08:59:12</td>   <td>107438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminDashboardPageTest.validateAdminPageHeadingTest()[pri:1, instance:com.crm.qa.testCases.AdminDashboardPageTest@3159c4b8]">validateAdminPageHeadingTest</td> 
+  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="f5b57f">  <td>19/09/16 08:59:13</td>   <td>108696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AdminDashboardPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.AdminDashboardPageTest@3159c4b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="f5b57f">  <td>19/09/16 08:59:14</td>   <td>110163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminDashboardPageTest.setup()[pri:0, instance:com.crm.qa.testCases.AdminDashboardPageTest@3159c4b8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="f5b57f">  <td>19/09/16 08:59:23</td>   <td>119323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminDashboardPageTest.verifyElementPresense()[pri:2, instance:com.crm.qa.testCases.AdminDashboardPageTest@3159c4b8]">verifyElementPresense</td> 
+  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="f5b57f">  <td>19/09/16 08:59:26</td>   <td>121908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AdminDashboardPageTest.tearDown()[pri:0, instance:com.crm.qa.testCases.AdminDashboardPageTest@3159c4b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/09/16 08:59:27</td>   <td>122907</td> <td title="&lt;&lt;LoginPageTest.afterSuite()[pri:0, instance:com.crm.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
 </table>
