--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -7,24 +7,12 @@
 </head>
 <body>
 <table>
-<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
+<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">PageFactoryDemo</th></tr>
-<tr><td><a href="#t0">LoginPageTest</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">44,384</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">CoursesPageTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">12,129</td><td></td><td></td></tr>
-<tr><td><a href="#t2">AdminDashboardPageTest</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">66,161</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">8</th><th class="num">0</th><th class="num">0</th><th class="num">122,674</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">AdminDashboardPageTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">44,405</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">PageFactoryDemo</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LoginPageTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.crm.qa.testCases.LoginPageTest</td><td><a href="#m0">titleTest</a></td><td rowspan="1">1568638654970</td><td rowspan="1">72</td></tr><tr class="passedeven"><td><a href="#m1">userLoginTest</a></td><td rowspan="1">1568638686306</td><td rowspan="1">1864</td></tr><tr class="passedeven"><td><a href="#m2">validateCopyrightTextTest</a></td><td rowspan="1">1568638675438</td><td rowspan="1">47</td></tr><tr class="passedeven"><td><a href="#m3">validateLogoTest</a></td><td rowspan="1">1568638665165</td><td rowspan="1">75</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">CoursesPageTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.crm.qa.testCases.CoursesPageTest</td><td><a href="#m4">validateCoursesPageHeadingTest</a></td><td rowspan="1">1568638698653</td><td rowspan="1">1708</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">AdminDashboardPageTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.crm.qa.mintTestCases.MINT1234</td><td><a href="#m5">mint1234</a></td><td rowspan="1">1568638702081</td><td rowspan="1">39391</td></tr><tr class="passedodd"><td rowspan="2">com.crm.qa.testCases.AdminDashboardPageTest</td><td><a href="#m6">validateAdminPageHeadingTest</a></td><td rowspan="1">1568638752079</td><td rowspan="1">1256</td></tr><tr class="passedodd"><td><a href="#m7">verifyElementPresense</a></td><td rowspan="1">1568638763964</td><td rowspan="1">2583</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">PageFactoryDemo</th></tr></tbody><tbody id="t0"><tr><th colspan="4">AdminDashboardPageTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.crm.qa.mintTestCases.MINT1234</td><td><a href="#m0">mint1234</a></td><td rowspan="1">1568729283423</td><td rowspan="1">42708</td></tr></tbody>
 </table>
-<h2>LoginPageTest</h2><h3 id="m0">com.crm.qa.testCases.LoginPageTest#titleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.crm.qa.testCases.LoginPageTest#userLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.crm.qa.testCases.LoginPageTest#validateCopyrightTextTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.crm.qa.testCases.LoginPageTest#validateLogoTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>CoursesPageTest</h2><h3 id="m4">com.crm.qa.testCases.CoursesPageTest#validateCoursesPageHeadingTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>AdminDashboardPageTest</h2><h3 id="m5">com.crm.qa.mintTestCases.MINT1234#mint1234</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{RecordingToCopy=Tue, Apr 03, 02 50 PM, CopyToCourse=democourse1, CopyFromCourse=purge148}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.crm.qa.testCases.AdminDashboardPageTest#validateAdminPageHeadingTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.crm.qa.testCases.AdminDashboardPageTest#verifyElementPresense</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>AdminDashboardPageTest</h2><h3 id="m0">com.crm.qa.mintTestCases.MINT1234#mint1234</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{RecordingToCopy=Tue, Apr 03, 02 50 PM, CopyToCourse=democourse1, CopyFromCourse=purge148}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
