--- a/test-output/old/PageFactoryDemo/toc.html
+++ b/test-output/old/PageFactoryDemo/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>PageFactoryDemo</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>3 tests</td>
-<td><a target='mainFrame' href='classes.html'>4 classes</a></td>
-<td>8 methods:<br/>
+<td>1 test</td>
+<td><a target='mainFrame' href='classes.html'>1 class</a></td>
+<td>1 method:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -22,24 +22,8 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>AdminDashboardPageTest (3/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>AdminDashboardPageTest (1/0/0)</td><td valign='top' align='right'>
   <a href='AdminDashboardPageTest.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>CoursesPageTest (1/0/0)</td><td valign='top' align='right'>
-  <a href='CoursesPageTest.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>LoginPageTest (4/0/0)</td><td valign='top' align='right'>
-  <a href='LoginPageTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
